--- a/configs/compton.conf
+++ b/configs/compton.conf
@@ -131,6 +131,13 @@ blur-background-exclude = [
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
+opacity-rule = [
+"80:class_g = 'Subl3'",
+"97:class_g = 'Thunar'",
+"97:class_g = 'Pamac-manager'",
+
+];
+
 #################################
 #
 # Fading
@@ -178,7 +185,7 @@ refresh-rate = 0;
 
 # Vertical synchronization: match the refresh rate of the monitor
 # this breaks transparency in virtualbox - put a "#" before next line to fix that
-vsync = true;
+vsync = false;
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
@@ -224,5 +231,5 @@ wintypes:
 #
 ######################
 
-# Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
+#Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = true;
